# trendsgpx

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: init.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_create_lineamientos.py  003_create_contenido.py  004_create_temas.py  005_create_demografia.py  006_create_tendencias.py  007_create_hypertable.py  008_create_aggregates.py  009_create_validacion.py  010_create_cleanup_function.py
docs/: README.md
docs/.claude/: settings.local.json
docs/speckit/: data-model.md  nlp-research.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/speckit/checklists/: requirements.md
docs/speckit/contracts/: events.yaml  openapi.yaml
src/: __init__.py  celery_app.py
src/api/: __init__.py  auth.py  main.py
src/api/routes/: __init__.py  collector.py  lineamientos.py  tendencias.py
src/collectors/: __init__.py  mastodon_collector.py  reddit_collector.py  youtube_collector.py
src/models/: MODELS_README.md  __init__.py  base.py  contenido.py  demografia.py  lineamiento.py  tema.py  tendencia.py  validacion.py
src/nlp/: __init__.py  sentiment_service.py  spacy_service.py  topic_service.py
src/schemas/: __init__.py  lineamiento.py  tendencia.py
src/services/: __init__.py  lineamiento_service.py
src/tasks/: __init__.py  analytics_tasks.py  collector_tasks.py  maintenance_tasks.py  nlp_tasks.py
src/utils/: __init__.py  config.py  logging.py  rate_limiter.py
tests/: conftest.py  test_lineamientos.py
